Dados, about_us

--- a/app/views/about_us/index.html.erb
+++ b/app/views/about_us/index.html.erb
@@ -1,1 +1,9 @@
-Um breve relato sobre os principais membros core do guru/se...
+<div>
+	<div>
+		<div>
+			<img src="http://www.gravatar.com/avatar/e35fe79eb8e5256f3607158553b972ea?s=100" alt="Smiley face" height="100" width="100" >
+			<h2>Haroldo Furtado</h2>
+			<p>Figura irreverente que aparece frequentemente em eventos e fóruns de tecnologia. De nenhuma forma pode ser considerado como um programador, optou pelo Rails por esta mesma razão, "Produzir o máximo com o mínimo é o que importa". Seu lema é "Se der para fazer rápido, sobra tempo para um pulo em algum bar."</p>
+		</div>
+	</div>
+</div>
